# avc

./: .gitignore  .gitreview  AUTHORS  HACKING  Makefile.am  NEWS  NOTES  README  autogen.sh  buildnumber.sh  configure.ac  libpagemaker.pc.in
docs/doxygen/: Makefile.am  doxygen.cfg
inc/: Makefile.am
inc/libpagemaker/: Makefile.am  PMDocument.h  libpagemaker.h
src/conv/: Makefile.am
src/conv/raw/: Makefile.am  pmd2raw.cpp  pmd2raw.rc.in
src/conv/svg/: .gitignore  Makefile.am  pmd2svg.cpp  pmd2svg.rc.in
src/conv/text/: .gitignore  Makefile.am  pmd2text.cpp  pmd2text.rc.in
src/conv/yaml/: .gitignore  Makefile.am  pmd2yaml  pmd2yaml.cpp  pmd2yaml.rc.in
src/fuzz/: Makefile.am  pmdfuzzer.cpp
src/lib/: .gitignore  Makefile.am  OutputShape.cpp  OutputShape.h  PMDCollector.cpp  PMDCollector.h  PMDColor.h  PMDExceptions.h  PMDInternalStream.cpp  PMDInternalStream.h  PMDPage.h  PMDParser.cpp  PMDParser.h  PMDRecord.h  PMDTypes.cpp  PMDTypes.h  PMDocument.cpp  Units.h  constants.h  geometry.cpp  geometry.h  libpagemaker.rc.in  libpagemaker_utils.cpp  libpagemaker_utils.h  offsets.h  yaml_utils.cpp  yaml_utils.h
tests/: basic_shapes  basic_shapes.pmd  substructure.py  test.py  test_manifest
